--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -81,7 +81,7 @@ li a:hover {
     justify-content: center;
   }
 .banner {
-    background-image: url('../images/img-mission-background.jpg'); 
+    background-image: url('https://content.codecademy.com/courses/freelance-1/unit-4/img-mission-background.jpg'); 
     height: 700px;
     width: 1200px;
     display: flex;
@@ -173,7 +173,7 @@ img {
 }
 
 .locationbanner {
-  background-image: url('../images/img-locations-background.jpg'); 
+  background-image: url('https://content.codecademy.com/courses/freelance-1/unit-4/img-locations-background.jpg'); 
   height: 500px;
   width: 1200px;
   display: flex;
