--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -81,7 +81,7 @@ li a:hover {
     justify-content: center;
   }
 .banner {
-    background-image: url('TeaCozyProject/resources/images/img-mission-background.jpeg'); 
+    background-image: url('../images/img-mission-background.jpeg'); 
     background-repeat: no-repeat;
     background-position: center;
     height: 700px;
@@ -175,7 +175,7 @@ img {
 }
 
 .locationbanner {
-  background-image: url('TeaCozyProject/resources/images/img-locations-background.jpeg'); 
+  background-image: url('../images/img-locations-background.jpeg'); 
     background-repeat: no-repeat;
     background-position: center;
   height: 500px;
